creé mi primer archivo

--- a/introduccion.ipynb
+++ b/introduccion.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# INTRODUCCIÓN A PYTHON 12/082024"
+    "# INTRODUCCIÓN A PYTHON 12/08/2024"
    ]
   },
   {
