--- a/introduccion.ipynb
+++ b/introduccion.ipynb
@@ -9,15 +9,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola mundo\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hola mundo') ## imprime el mensaje "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "valor 5+5\n",
+      "El valor es de:14.0\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "5+5\n",
+    "print('valor 5+5')\n",
+    "print(f'El valor es de:{5*(2.5+3.1)/2}')\n",
+    "x = 5*2\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# OTRAS OPERACIONES "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.0\n",
+      "El valor de la variable B es gual:8.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "2**3\n",
+    "B = (2**3+4**2)/3\n",
+    "print(B)\n",
+    "print(f'El valor de la variable B es gual:{B}')\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
