--- a/introduccion.ipynb
+++ b/introduccion.ipynb
@@ -74,6 +74,83 @@
     "print(B)\n",
     "print(f'El valor de la variable B es gual:{B}')\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# GUARDAR TEXTO EN VARIABLES \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "casa amarillo\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 'casa'\n",
+    "y = 'amarillo'\n",
+    "e = ' '\n",
+    "z = x+e+y\n",
+    "print(z)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# INGRESO DE VALORES POR TECLADO "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n",
+      "13.517299704613635\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = float(input('ingrese valor'))\n",
+    "g = 3.9\n",
+    "z = ((x**2)+(g**2))/(x)**(1/2)\n",
+    "print(type(g))\n",
+    "print(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'c']\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = ['a','b','c','d']\n",
+    "x.pop(-1) # elimina el primer elemento de derecha a izquierda\n",
+    "x.remove('b') # remueve el elemento puesto en remove \n",
+    "print(x)"
+   ]
   }
  ],
  "metadata": {
