--- a/introduccion.ipynb
+++ b/introduccion.ipynb
@@ -151,6 +151,179 @@
     "x.remove('b') # remueve el elemento puesto en remove \n",
     "print(x)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ESTRUCTURAS DE CONTROL "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for X in range(0,3):\n",
+    "    print(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valor de la variable4\n",
+      "Valor de la variable5\n",
+      "Valor de la variable6\n",
+      "Valor de la variable7\n"
+     ]
+    }
+   ],
+   "source": [
+    "for X in range(4,8):\n",
+    "    print(f'Valor de la variable{X}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "M\n",
+      "a\n",
+      "n\n",
+      "z\n",
+      "a\n",
+      "n\n",
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "for X in 'Manzana':\n",
+    "    print(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La variable b es menor que a\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 300\n",
+    "b = 42\n",
+    "if b<a:\n",
+    "    print('La variable b es menor que a')\n",
+    "else:\n",
+    "    print('La variable b es mayor que a')\n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "las variables son diferentes\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 'mama'\n",
+    "y = 'mamá'\n",
+    "if x==y:\n",
+    "    print('las variables son iguales')\n",
+    "else: \n",
+    "    print('las variables son diferentes')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "la variaqble a es igual a b\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 300\n",
+    "b = 300\n",
+    "if b<a:\n",
+    "    print('La variable b es menor que a')\n",
+    "elif b==a:\n",
+    "    print('la variaqble a es igual a b')\n",
+    "else:\n",
+    "    print('La variable b es mayor que a')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CICLO WHILE \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<6:\n",
+    "    print(i) # imprime los elementos menore que seis y los va sumando de uni en uno hasta cumplir la conc¿dicion \n",
+    "    \n",
+    "    i = i+1\n"
+   ]
   }
  ],
  "metadata": {
