--- a/introduccion.ipynb
+++ b/introduccion.ipynb
@@ -321,8 +321,112 @@
     "i=1\n",
     "while i<6:\n",
     "    print(i) # imprime los elementos menore que seis y los va sumando de uni en uno hasta cumplir la conc¿dicion \n",
-    "    \n",
     "    i = i+1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# COMBINACIÓN DE ESTRUCTURAS "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "llegue al tres\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<10:\n",
+    "    print(i)\n",
+    "    if i == 3:\n",
+    "        print('llegue al tres')\n",
+    "    i = i+1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n",
+      "5.0\n",
+      "5.0\n",
+      "5.0\n",
+      "5.0\n",
+      "5.0\n",
+      "5.0\n",
+      "5.0\n",
+      "5.0\n",
+      "5.0\n",
+      "5.0\n",
+      "5.0\n",
+      "5.0\n",
+      "5.0\n",
+      "5.0\n",
+      "5.0\n",
+      "5.0\n",
+      "5.0\n",
+      "5.0\n",
+      "5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = float(input('Valor x:'))\n",
+    "y = float(input('Valor y:'))\n",
+    "\n",
+    "for i in range (20):\n",
+    "    if (x>4 and y<10):\n",
+    "        print(x)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Could not find a version that satisfies the requirement matplottlib (from versions: none)\n",
+      "ERROR: No matching distribution found for matplottlib\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install matplottlib"
    ]
   }
  ],
