--- a/introduccion.ipynb
+++ b/introduccion.ipynb
@@ -1047,6 +1047,13 @@
     "t2 = np.arange(0,2*np.pi,0.2)\n",
     "plt.plot(t1,np.cos(2*np.pi*t1)*np.exp(-t1),'r',t2,np.cos(2*np.pi*t2)*np.exp(-t2),'bo')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# taller finalizado "
+   ]
   }
  ],
  "metadata": {
